--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
+    <div class="flex-container">
+        <div class="block" style ="flex-grow: 1; margin: 5px">IIMAE adalah Intelligent Industrial Mechatronics Automation Enterprises YUHU</div>
+<div class="container" style ="flex-grow: 10; margin: 5px"> 
 <div class="header">
 
     <div class="logo"><img src="img/logo.jpg" width="120" height="130"></div>
@@ -53,6 +55,8 @@
 <div class="footer">
     <p class="copyr">Copyright 2022. Namira Fathani</p>
 </div>
+</div>
+    <div class="block" style ="flex-grow: 1; margin: 5px">HARUSNYA MUNCUL WEH HARUSNYAHARUSNYA MUNCUL WEH HARUSNYAHARUSNYA MUNCUL WEH HARUSNYAHARUSNYA MUNCUL WEH HARUSNYAHARUSNYA MUNCUL WEH HARUSNYAHARUSNYA MUNCUL WEH HARUSNYAHARUSNYA MUNCUL WEH HARUSNYA</div>
 </div>
 </body>
 
